--- a/styles/template.css
+++ b/styles/template.css
@@ -73,6 +73,11 @@ h2{
     padding-bottom: 10px;
 }
 
+#sceneSize img{
+    width: 24px;
+    max-height: 40px;
+  }
+
 .info p{
     color: #707070;
     margin: 0 auto;
