--- a/styles/book.css
+++ b/styles/book.css
@@ -271,6 +271,15 @@ input[type=submit]{
 
 @media screen and (min-width:768px) and (max-width:1024px)
 {
+
+  main{
+  padding-top: 100px;
+  }
+
+  .textTitle{
+    font-size:80%; 
+  }
+
   .container{
     width:768px;
     flex-wrap: wrap;
@@ -300,6 +309,11 @@ input[type=submit]{
 
 @media screen and (max-width:768px)
 {
+
+  main{
+  padding-top: 100px;
+  }
+
   .container{
     width:100%;
     flex-wrap: wrap;
