--- a/styles/card.css
+++ b/styles/card.css
@@ -280,13 +280,18 @@ div#wifiSize h3{
 div#forkSize h3{
   font-size: 10px;
   padding-left: 5px;
+  margin-top: 0px;
 }
 
 #forkSize img{
-  max-width: 20px;
-  max-height: 60px;
+  max-width: 24px;
+  max-height: 24px;
 }
 
+#forkSize{
+  margin-left: 10px;
+  margin-top: 30px;
+}
 
 @media screen and (max-width:950px){
   .containerCard{
