--- a/styles/footer.css
+++ b/styles/footer.css
@@ -38,3 +38,18 @@ footer ul{
 footer h2{
     font-size: 20px;
 }
+
+@media screen and (min-width:768px) and (max-width:1024px)
+{
+  footer{
+    width: 100%;
+    flex-direction: column;
+    margin: 0px;
+    display: flex;
+    align-items: center;
+}
+
+footer div{
+    width: 30%;
+  }
+}
