--- a/styles/footer.css
+++ b/styles/footer.css
@@ -39,17 +39,17 @@ footer h2{
     font-size: 20px;
 }
 
-@media screen and (min-width:768px) and (max-width:1024px)
+@media screen and (max-width:1024px)
 {
-  footer{
-    width: 100%;
-    flex-direction: column;
-    margin: 0px;
-    display: flex;
-    align-items: center;
-}
+    footer{
+        width: 100%;
+        flex-direction: column;
+        margin: 0px;
+        display: flex;
+        align-items: center;
+    }
 
-footer div{
-    width: 30%;
-  }
+    footer div{
+        width: 30%;
+    }
 }
