--- a/styles/sent.css
+++ b/styles/sent.css
@@ -10,7 +10,7 @@ body{
   font-size: 100%;
   font-weight: 500;
   width:100%;
-  height:100%;
+  height:auto;
 }
 
 .container{
@@ -25,7 +25,7 @@ body{
   flex-direction: column;
   justify-content: center;
   width:1024px;
-
+  height: auto;
 }
 
 .sent{
@@ -36,6 +36,7 @@ body{
   font-size: 250%;
   font-family: "CaviarDreams" "helvetica";
   color: white;
+  padding-bottom: 200px;
 }
 
 .backToMain{
@@ -47,4 +48,37 @@ body{
   margin:1%;
   padding: 1%;
   text-transform: uppercase;
+}
+
+
+@media screen and (min-width:768px) and (max-width:1024px)
+{
+
+  main{
+  padding-top: 100px;
+  }
+
+
+    .sent{
+      font-size:250%;
+      padding-left: 15%;
+    }
+
+}
+
+@media screen and (max-width:768px)
+{
+
+  main{
+  padding-top: 100px;
+  }
+
+  .textTitle{
+      font-size:120%;
+  }
+
+  .sent{
+    font-size:200%;
+    padding-left: 10%;
+  }
 }
