--- a/styles/footer.css
+++ b/styles/footer.css
@@ -73,6 +73,41 @@ footer h2{
     }
 
     footer div{
-        width: 25%;
+        width: 70%;
     }
+
+      footer h3{
+      font-size: 120%;
+    }
+
+      footer li{
+      font-size: 50%;
+    }
+}
+
+
+@media screen and (max-width:768px)
+{
+
+  footer{
+      width: 100%;
+      flex-direction: column;
+      margin: 0px;
+      display: flex;
+      align-items: center;
+  }
+
+  footer div{
+      width: 70%;
+  }
+
+  footer h3{
+    font-size: 70%;
+  }
+
+  footer li{
+    font-size: 50%;
+  }
+
+
 }
