--- a/styles/footer.css
+++ b/styles/footer.css
@@ -14,6 +14,7 @@ footer{
     font-family: Helvetica;
     justify-content: space-around;
     align-items: stretch;
+    bottom:0;
 }
 
 footer div{
