--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,3 +1,7 @@
+html{
+  heigth:100vh;
+}
+
 footer, footer div, footer ul, footer li, footer h3, footer p, footer a{
     margin: 0 auto;
     box-sizing: border-box;
