--- a/styles/card.css
+++ b/styles/card.css
@@ -10,12 +10,22 @@
   margin: 0 auto;
 }
 
-.CdC {
-  width: 100%;
-  height: 100%;
-  z-index: -50;
+.CdC{
+  width:60%;
 }
+.hero {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../images/homeBackground.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 
+}
 /*Introduction*/
 
 .container-home{
