--- a/styles/card.css
+++ b/styles/card.css
@@ -130,7 +130,7 @@ div.title2{
 }
 
 .title h3, .title2 h3{
-  font-family: 'Caviar Dreams';
+  font-family: 'Caviar Dreams' 'helvetica';
   font-size: 25px;
   padding-bottom: 5px;
   border-bottom-style: solid;
@@ -154,7 +154,7 @@ div.text{
 body{
   margin: 0;
   padding: 0;
-  font-family: 'Caviar Dreams';
+  font-family: 'Caviar Dreams' 'helvetica';
   color: #444
 }
 
@@ -389,7 +389,7 @@ div#forkSize h3{
   color: white;
   margin-bottom: 1%;
   font-size: 70px;
-  font-family: 'Caviar Dreams'
+  font-family: 'Caviar Dreams' 'helvetica';
 }
 
 .cinema p{
@@ -397,11 +397,11 @@ div#forkSize h3{
   margin-bottom: 6%;
   color: white;
   font-size: 30px;
-  font-family: 'Caviar Dreams'
+  font-family: 'Caviar Dreams''helvetica';
 }
 
 .cinema a{
-  font-family: 'Caviar Dreams';
+  font-family: 'Caviar Dreams' 'helvetica';
   margin-right: 15%;
   border-style: solid;
   border-color: white;
