--- a/styles/card.css
+++ b/styles/card.css
@@ -32,23 +32,29 @@ main{
 
 }
 
+.MainContainer .hero .btn{
+  position: absolute;
+  left: calc(50% - 25);
+  top: 90%;
+  width:15px;
+  height:30px;
+  background:transparent;
+  border:none;
+  outline:0;
+}
 
 .scroll-down {
 	position: absolute;
-	left: 50%;
-	bottom: 50px;
+  left: 0;
+  right: 0;
+  top:;
 	display: block;
 	text-align: center;
-	font-size: 20px;
-	z-index: 100;
-	text-decoration: none;
-	text-shadow: 0;
   width: 13px;
   height: 13px;
   border-bottom: 2px solid #fff;
   border-right: 2px solid #fff;
-  z-index: 9;
-  left: 50%;
+  border-bottom: 2px solid #fff;
   -webkit-transform: translate(-50%, 0%) rotate(45deg);
   -moz-transform: translate(-50%, 0%) rotate(45deg);
   transform: translate(-50%, 0%) rotate(45deg);
@@ -56,6 +62,8 @@ main{
 	-moz-animation:    fade_move_down 4s ease-in-out infinite;
 	animation:         fade_move_down 4s ease-in-out infinite;
 }
+
+
 
 
 /*animated scroll arrow animation*/
