--- a/styles/card.css
+++ b/styles/card.css
@@ -47,7 +47,6 @@ main{
 	position: absolute;
   left: 0;
   right: 0;
-  top:;
 	display: block;
 	text-align: center;
   width: 13px;
@@ -63,8 +62,9 @@ main{
 	animation:         fade_move_down 4s ease-in-out infinite;
 }
 
-
-
+.MainContainer .hero .btn .scroll-down:hover{
+  cursor: pointer;
+}
 
 /*animated scroll arrow animation*/
 @-webkit-keyframes fade_move_down {
@@ -252,6 +252,7 @@ box-shadow: 5px 7px 5px 0px #E2E2E2;
   max-width: 30px;
   max-height: 60px;
 }
+
 .icon{
   display: flex;
   justify-content: space-around;
@@ -371,15 +372,14 @@ div#forkSize h3{
   }
 }
 
-
-/*cinema*/
+/*CINEMA*/
 
 .cinema{
   margin-top: 2%;
   background-image:url(../images/cinema/cinema.png);
   background-attachment: fixed;
   background-position: center center;
-  background-repeat: :no-repeat;
+  background-repeat:no-repeat;
   width: 100%;
   height: 100%;
   padding-bottom: 5%;
