--- a/styles/nav.css
+++ b/styles/nav.css
@@ -11,7 +11,7 @@ nav{
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color: rgb(0, 0, 0, 0.9);
+    background: rgb(0, 0, 0, 0.9);
     font-family: 'Helvetica';
     text-transform: uppercase;
     font-size: 19px;
@@ -92,7 +92,7 @@ nav{
 .burger div{
     width: 25px;
     height: 3px;
-    background-color: rgba(255, 255, 255, 0.95);
+    background: rgba(255, 255, 255, 0.95);
     margin: 5px;transition: all 0.3s ease;
     -webkit-background: black;
   	-moz-background: black;
