--- a/styles/slider.css
+++ b/styles/slider.css
@@ -1,62 +1,121 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
 
-/* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider *//* Slider */
-
-.carousel-container{
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-}
-
-.carousel-slide{
-    display: flex;
-    width: 100%;
-    height: 600px; /*HAUTEUR DU SLIDER*/
-}
-
-.carousel-slide img{
+.mySlides {
+    display: none;
     width: 100%;
     height: 100%;
-}
-
-#prevBtn{
-    height: 25px;
-    width: 50px;
+    opacity: 0.5px;
+  }
+  img {
+    vertical-align: middle;
+  }
+  
+  /* Slideshow container */
+  .slideshow-container {
+    max-width: 1000px;
+    margin: auto;
+    object-fit:cover;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
     position: absolute;
     top: 50%;
-    z-index: 10;
-    left: 5%;
-    cursor: pointer;
-    border: none;
-    background: url("../icons/left-arrow.svg") no-repeat left; /* Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence */
-}
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+  }
 
-#nextBtn{
-    height: 25px;
-    width: 50px;
+  .prev{
+      position: absolute;
+      left: 0;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color:#FF9300;
+  }
+  
+  /* Number text (1/3 etc) */
+  .slider-img{
+    color: #f2f2f2;
+    font-size: 12px;
     position: absolute;
-    top: 50%;
-    z-index: 10;
-    right: 5%;
+    top: 0;
+    width:100%;
+    height: 100%;
+    object-fit:cover;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
     cursor: pointer;
-    border: none;
-    background: url("../icons/right-arrow.svg") no-repeat right; /* Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence */
-}
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active,
+  .dot:hover {
+    background-color: #717171;
+  }
+  
 
-@media screen and (max-width:1050px){
-    .carousel-container{
-        height: 400px;
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .prev,
+    .next,
+    .text {
+      font-size: 11px;
     }
-}
+  }
+  
 
-@media screen and (max-width:768px){
-    .carousel-container{
-        width: 100%;
-        height: 300px;
-    }
+
+@media screen and (max-width:768px) {
+    .slider-img{
+        color: #f2f2f2;
+        font-size: 12px;
+        position: static;
+        top: 0;
+        width:100%;
+        height:200%;
+        object-fit:cover;
+      }
+
+      .dot{
+          width: 5px;
+          height: 5px;
+      }
+
+      .next{
+        position: absolute;
+        right: 0;
+        color: #FFC474;
+      }
+
+      .prev{
+        position: absolute;
+        left: 0;
+        color: #FFC474;
+      }
 }
-/* Slider END *//* Slider END *//* Slider END *//* Slider END *//* Slider END *//* Slider END *//* Slider END *//* Slider END */
