--- a/styles/template.css
+++ b/styles/template.css
@@ -1,100 +1,102 @@
-.container{
+.container {
     align-items: center;
     margin: 0 auto;
     width: 1024px;
     display: flex;
 }
 
-h2{
+h2 {
     font-family: 'Caviar Dreams';
     font-size: 30px;
     text-align: center;
     color: #707070;
+}
 
-  }
-
-.square{
-    width: 100px;
-    height: 500px;
+.whole-card-container {
+    position: relative;
+    left: calc(50% - 40vw);
+    top: calc(50% - 35vh);
+    width: 80vw;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
     background-color: #F2F2F2;
-    box-shadow: -5px 7px 5px 0px #E2E2E2;
+    box-shadow: 5px 7px 5px 0px #E2E2E2;
 }
 
-.slider{
-    width: 100%;
-    height: 100%;
+.whole-card-container .slideshow-container {
+    position: absolute;
+    left: 20px;
+    top: -20px;
+    bottom: -20px;
+    --width: 50vw;
+    width: var(--width);
+    height: 110%;
+    overflow: hidden;
+    align-items: center;
+    background: pink;
 }
 
-.slider img{
-    height: 100%;
-    width: 100%;
-}
-
-.presentation{
-    width: 50%;
-    height: 500px;
-    background-color: #F2F2F2;
+.whole-card-container .presentation {
+    position: absolute;
+    width: 30vw;
+    height: 80%;
+    top: 0px;
+    right: 0;
     flex-wrap: nowrap;
     padding-left: 30px;
     padding-right: 30px;
     justify-content: center;
     align-items: center;
-    box-shadow: 5px 7px 5px 0px #E2E2E2;
 }
 
-.fiches{
-    padding-top: 20px;
-    padding-bottom: 20px;
-    align-items: center;
-}
-
-.fiche h2{
+.fiche h2 {
     padding-top: 20px;
     padding-bottom: 20px;
 }
 
-.info{
+.info {
     padding-top: 20px;
     padding-bottom: 20px;
 }
 
-.specs{
+.specs {
     display: flex;
     flex-flow: column row;
     align-items: center;
 }
 
-.objects p{
+.objects p {
     margin-left: 20px;
 }
 
-.info{
+.info {
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
-#sceneSize img{
+#sceneSize img {
     width: 24px;
     max-height: 40px;
-  }
-
-#regle img{
- width: 24px;
-  max-height: 40px;
 }
 
-.info p{
+#regle img {
+    width: 24px;
+    max-height: 40px;
+}
+
+.info p {
     color: #707070;
     margin: 0 auto;
 }
 
-.info ul{
+.info ul {
     color: #707070;
     margin: 0 auto;
-    padding-left : 20px;
+    padding-left: 20px;
 }
 
-.button{
+.button {
     background-color: #FF9300;
     height: 30px;
     width: 100px;
@@ -103,12 +105,12 @@ h2{
     justify-content: center;
     align-items: center;
     text-align: center;
-    border-color:#FF9300;
+    border-color: #FF9300;
     display: flex;
     margin-left: 30%;
 }
 
-.button a{
+.button a {
     color: white;
     text-decoration: none;
     justify-content: center;
@@ -116,84 +118,95 @@ h2{
 }
 
 
+@media screen and (min-width:768px) and (max-width:1024px) {
+    .container {
+        width: 768px;
+        flex-wrap: wrap;
+        align-items: center;
+        flex-direction: column;
+    }
 
-@media screen and (min-width:768px) and (max-width:1024px)
-{
-  .container{
-    width:768px;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-  }
+    .whole-card-container {
+        margin-bottom: 10vh;
+    }
 
-  .square{
-      display: none;
-  }
+    #epn {
+        height: 420px;
+    }
 
-  .slider{
-      width: 60%;
-      height: 60%;
-  }
+    #amphi {
+        height: 400px;
+    }
 
-  .presentation{
-      width: 300px;
-      height: 550px;
-  }
+    #reu {
+        height: 400px;
+    }
 
-  #epn{
-      height: 420px;
-  }
-
-  #amphi{
-    height: 400px;
-  }
-
-  #reu{
-      height: 400px;
-  }
-
-  #hall{
-    height: 350px;
-  }
+    #hall {
+        height: 350px;
+    }
 }
 
+@media screen and (max-width:768px) {
+    .container {
+        width: 100%;
+        flex-wrap: wrap;
+        align-items: center;
+        flex-direction: column;
+    }
 
-@media screen and (max-width:768px)
-{
-  .container{
-    width:100%;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-  }
+    .whole-card-container {
+        position: static;
+        left: calc(50% - 40vw);
+        top: calc(50% - 35vh);
+        width: 80vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        background-color: #F2F2F2;
+        box-shadow: 5px 7px 5px 0px #E2E2E2;
+        margin-bottom: 10vh;
+    }
 
-  .square{
-      display: none;
-  }
+    .whole-card-container .slideshow-container {
+        position: static;
+        left: 20px;
+        top: -20px;
+        bottom: -20px;
+        --width: 50vw;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        align-items: center;
+    }
 
-  .slider{
-      width: 60%;
-      height: 60%;
-  }
+    .whole-card-container .presentation {
+        position: static;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        right: 0;
+        flex-wrap: nowrap;
+        padding-left: 30px;
+        padding-right: 30px;
+        justify-content: center;
+        align-items: center;
+    }
 
-  .presentation{
-      width: 300px;
-      height: 550px;
-  }
+    #epn {
+        height: 420px;
+    }
 
-  #epn{
-    height: 420px;
-  }
+    #amphi {
+        height: 400px;
+    }
 
-  #amphi{
-      height: 400px;
-  }
+    #reu {
+        height: 400px;
+    }
 
-  #reu{
-    height: 400px;
-}
-
-  #hall{
-      height: 350px;
-  }
+    #hall {
+        height: 350px;
+    }
 }
