--- a/styles/template.css
+++ b/styles/template.css
@@ -34,7 +34,7 @@ h2 {
     height: 110%;
     overflow: hidden;
     align-items: center;
-    background: pink;
+    background: #FF9300;
 }
 
 .whole-card-container .presentation {
