--- a/styles/book.css
+++ b/styles/book.css
@@ -67,7 +67,7 @@ main{
 }
 
 .textTitle{
-  font-family: 'CaviarDreams';
+  font-family: 'CaviarDreams','helvetica';
   margin-top:6%;
   border-left-style: solid;
   border-left-color: #FF9300;
@@ -95,13 +95,15 @@ main{
 form.formContainer{
   padding-left: 50px;
   padding-right: 60px;
+  padding-top:10px;
   width:100%;
   height:100%;
   background-color: #f2f2f2;
-  border-radius: 5%;
+  border-radius: 15px;
   display:flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom:20vh;
 }
 
 .flexbox{
@@ -120,7 +122,7 @@ select#subject{
 input{
   border: solid #707070 thin;
   border-radius: 5%;
-  height: 1.8%;
+  height: 4vh;
   width:100%;
 }
 
@@ -333,7 +335,7 @@ input[type=submit]{
 
     .smallText{
       margin-top:3%;
-      width:80%;
+      width:66%;
     }
 
     .blocTwo{
