--- a/styles/nav.css
+++ b/styles/nav.css
@@ -114,18 +114,21 @@ nav{
     body{
         overflow-x: hidden;
     }
+
     .nav-links{
         position: absolute;
         right: 0px;
-        height: 92vh;
+        height: 100vh;
         top: 8vh;
         background-color: rgb(0, 0, 0, 0.9);
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: flex-start;
         width: 50%;
         transform: translateX(100%);
         transition: transform 0.2s ease-in;
+        margin-bottom:20vh;
     }
 
     .nav-links{
@@ -135,6 +138,21 @@ nav{
     .nav-links li{
         opacity: 0;
         margin-bottom:5%;
+    }
+
+    .nav-links a{
+        display:flex;
+        align-items: center;
+
+    }
+
+    .submenu{
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        width: 100%;
+        z-index:100;
+        background: rgb(0, 0, 0, 1);
     }
     .burger{
         display: block;
