--- a/styles/nav.css
+++ b/styles/nav.css
@@ -23,10 +23,8 @@ nav{
 }
 
 .logo{
-    color: rgba(255, 255, 255, 0.95);
-    letter-spacing: 5px;
-    font-size: 22;
-    text-decoration: none;
+    height:5vh;
+    width:auto;
 }
 
 .nav-links{
@@ -114,21 +112,18 @@ nav{
     body{
         overflow-x: hidden;
     }
-
     .nav-links{
         position: absolute;
         right: 0px;
-        height: 100vh;
+        height: 92vh;
         top: 8vh;
         background-color: rgb(0, 0, 0, 0.9);
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
         width: 50%;
         transform: translateX(100%);
         transition: transform 0.2s ease-in;
-        margin-bottom:20vh;
     }
 
     .nav-links{
@@ -139,20 +134,8 @@ nav{
         opacity: 0;
         margin-bottom:5%;
     }
-
-    .nav-links a{
-        display:flex;
-        align-items: center;
-
-    }
-
-    .submenu{
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        width: 100%;
-        z-index:100;
-        background: rgb(0, 0, 0, 1);
+    .nav-links ul{
+        background:none;
     }
     .burger{
         display: block;
@@ -166,6 +149,11 @@ nav{
     transform: translateX(0%);
 }
 
+@media screen and (max-width:1024px){
+    .disappear{
+        visibility:visible;
+    }
+}
 @keyframes navLinkFade{
     from{
         opacity: 0;
