--- a/styles/slider.css
+++ b/styles/slider.css
@@ -55,10 +55,10 @@
     color: #f2f2f2;
     font-size: 12px;
     position: absolute;
-    top: 0;
-    width:100%;
+    width:120%;
     height: 100%;
     object-fit:cover;
+
   }
   
   /* The dots/bullets/indicators */
@@ -97,8 +97,9 @@
         position: static;
         top: 0;
         width:100%;
-        height:200%;
+        height:250%;
         object-fit:cover;
+        bottom: 50%;
       }
 
       .dot{
