--- a/styles/slider.css
+++ b/styles/slider.css
@@ -6,7 +6,7 @@
     opacity: 0.5px;
   }
   img {
-    vertical-align: middle;
+    vertical-align: bottom;
   }
   
   /* Slideshow container */
@@ -14,6 +14,8 @@
     max-width: 1000px;
     margin: auto;
     object-fit:cover;
+    display: table-cell;
+    vertical-align: bottom;
   }
   
   /* Next & previous buttons */
@@ -58,7 +60,6 @@
     width:120%;
     height: 100%;
     object-fit:cover;
-
   }
   
   /* The dots/bullets/indicators */
@@ -97,7 +98,7 @@
         position: static;
         top: 0;
         width:100%;
-        height:250%;
+        height:auto;
         object-fit:cover;
         bottom: 50%;
       }
